--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,31 @@ version: "3.7"
 services:
   producer:
     build: producer
+    container_name: producer
     environment:
-      - PRODUCER_DELAY=0.14 
-  # kafka:
-  #   image: docker.io/bitnami/kafka:3.6.1
-  #   container_name: kafka
-  #   ports:
-  #     - "9092:9092"
-  #   volumes:
-  #     - "kafka_data:/bitnami"
-  #   environment:
-  #     - KAFKA_CFG_NODE_ID=0
-  #     - KAFKA_CFG_PROCESS_ROLES=controller,broker
-  #     - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-  #     - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-  #     - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-  #     - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - PRODUCER_DELAY=1 
+      - PRODUCER_TOPIC=stock_price_changes
+    networks:
+      - kafka_network
+  kafka:
+    image: docker.io/bitnami/kafka:3.6.1
+    container_name: kafka
+    networks:
+      - kafka_network
+    ports:
+      - "9094:9094"
+    volumes:
+      - "kafka_data:/bitnami"
+    environment:
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
 volumes:
   kafka_data:
     driver: local
+networks:
+  kafka_network:
+    name: kafka_hello_world_network
