--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -2,5 +2,5 @@ FROM python:3.12.1
 WORKDIR /code
 COPY requirements.txt .
 RUN pip install -r requirements.txt
-COPY ./consumer.py .
+COPY ./src .
 CMD ["python", "-u", "./consumer.py"]
