--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,10 @@ services:
       - kafka_network
       - postgres_network
     depends_on:
-      - kafka
-      - postgres
+      kafka:
+        condition: service_started
+      postgres:
+        condition: service_healthy
   kafka:
     image: bitnami/kafka:3.6.1
     container_name: kafka
@@ -55,6 +57,11 @@ services:
       - postgres_network
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 1s
+      timeout: 2s
+      retries: 20
 # volumes:
 #   kafka_data:
 #     driver: local
