--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -1,9 +1,3 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0
-
-WORKDIR /src
-COPY *.csproj .
-RUN dotnet restore
-
-COPY . .
-
+WORKDIR /app
 CMD ["dotnet", "watch", "run", "--project", "api.csproj", "--urls", "http://*:8080"]
