--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -6,4 +6,4 @@ RUN dotnet restore
 
 COPY . .
 
-CMD ["dotnet", "watch", "run", "--project", "api.csproj", "--urls", "http://*:8080"]
+CMD ["dotnet", "watch", "run", "--project", "api.csproj", "--urls", "http://*:8080", "--non-interactive"]
