--- a/api/compose-dev.yml
+++ b/api/compose-dev.yml
@@ -7,6 +7,7 @@ services:
     container_name: api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - API_CONNECTION_STRING=Host=postgres;Username=postgres;Password=123456;
     ports:
       - "8080:8080"
     volumes:
