update compose for api

--- a/compose.yml
+++ b/compose.yml
@@ -55,8 +55,16 @@ services:
   api:
     build: api
     container_name: api
+    environment:
+      - API_PG_HOST=postgres
+      - API_PG_PORT=5432
+      - API_PG_USER=postgres
+      - API_PG_PASSWORD=123456
+      - API_PORT=3000
     ports:
-      - "8080:8080"
+      - "3000:3000"
+    networks:
+      - postgres_network
   kafka:
     image: bitnami/kafka:3.6.1
     container_name: kafka
