--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@dnlup/fastify-traps": "^3.0.1",
     "@fastify/postgres": "^5.2.2",
+    "@fastify/websocket": "^8.3.0",
     "fastify": "^4.25.1",
     "pg": "^8.11.3"
   },
