--- a/api/package.json
+++ b/api/package.json
@@ -12,9 +12,12 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@dnlup/fastify-traps": "^3.0.1",
+    "@fastify/autoload": "^5.8.0",
     "@fastify/postgres": "^5.2.2",
     "@fastify/websocket": "^8.3.0",
     "fastify": "^4.25.1",
+    "fastify-sse-v2": "^3.1.2",
+    "kafkajs": "^2.2.4",
     "pg": "^8.11.3"
   },
   "devDependencies": {
