--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,7 @@ services:
     build: producer
     container_name: producer
     environment:
-      - PRODUCER_SPEED_MS=1000
+      - PRODUCER_SPEED_MS=30000
       - PRODUCER_TOPIC=stock_price_changes
       - PGHOST=postgres
       - PGUSER=postgres
@@ -65,6 +65,12 @@ services:
       - "3000:3000"
     networks:
       - postgres_network
+      - kafka_network
+    depends_on:
+      kafka:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
   kafka:
     image: bitnami/kafka:3.6.1
     container_name: kafka
