--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "@fastify/postgres": "^5.2.2",
     "@fastify/websocket": "^8.3.0",
     "fastify": "^4.25.1",
+    "fastify-plugin": "^4.5.1",
     "fastify-sse-v2": "^3.1.2",
     "kafkajs": "^2.2.4",
     "pg": "^8.11.3"
