--- a/compose.yml
+++ b/compose.yml
@@ -91,7 +91,7 @@ services:
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
     healthcheck:
       # ensure topic is created before marked as ready
-      test: "kafka-topics.sh --create --topic stock_price_changes --bootstrap-server localhost:9092"
+      test: "kafka-topics.sh --list --bootstrap-server localhost:9092"
       interval: 5s
       timeout: 10s
       retries: 5
