--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,12 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "apexcharts": "^3.45.1",
+    "chart.js": "^4.4.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^3.0.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
