--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "apexcharts": "^3.45.1",
     "chart.js": "^4.4.1",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
