--- a/compose.yml
+++ b/compose.yml
@@ -73,6 +73,23 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+    healthcheck:
+      test: "wget --no-verbose --tries=1 --spider localhost:3000/stocks || exit 1"
+      interval: 5s
+      timeout: 10s
+      retries: 5
+  frontend:
+    build: frontend
+    container_name: frontend
+    ports:
+      - "8080:80"
+    environment:
+      - NGINX_PORT=80
+    networks:
+      - api_network
+    depends_on:
+      api:
+        condition: service_healthy
   kafka:
     image: bitnami/kafka:3.6.1
     container_name: kafka
@@ -91,7 +108,7 @@ services:
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
     healthcheck:
       # ensure topic is created before marked as ready
-      test: "kafka-topics.sh --list --bootstrap-server localhost:9092"
+      test: "kafka-topics.sh --list --bootstrap-server localhost:9092 && kafka-topics.sh --create --bootstrap-server localhost:9092 --if-not-exists --topic stock_price_changes"
       interval: 5s
       timeout: 10s
       retries: 5
